tests/invalid/errors-between-comments.cipl
// my first lex error
$a

/*
 * this error is a bit more sophisticated
 * but i can handle
 * properly too
 * :)
 :P
 ****
*/

@Decorator()